--- a/Hobbies.html
+++ b/Hobbies.html
@@ -175,7 +175,7 @@
   <header>
     <div class="logo">Charles' Website</div>
     <nav class="nav">
-      <a href=" Index.html"> About </a>
+      <a href=" index.html"> About </a>
       <a href="Projects.html"> Projects </a>
 	  <a href="Hobbies.html"> Hobbies & Interests </a>
 	  
