--- a/Projects.html
+++ b/Projects.html
@@ -79,7 +79,7 @@
   
     <div class="logo">Charles' Website</div>
     <nav class="nav">
-      <a href=" Index.html"> About </a>
+      <a href=" index.html"> About </a>
       <a href="Projects.html"> Projects </a>
 	  <a href="Hobbies.html"> Hobbies & Interests </a>
 	  
